--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "require": {
-    "j4mie/idiorm": "1.5.*",
+    "illuminate/database": "^5.6",
     "twig/twig": "^2.9.0",
     "fzaninotto/faker": "1.9.*",
     "intervention/image": "2.5.*"
